bk_ida/gccida/c2/gen_formal_types_die
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_formal_types_die/src/dwarf2out.c:10522:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_formal_types_die/src/dwarf2out.c:10539:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v5 = ( __int64)v4[2]; 
               ^~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_formal_types_die/src/dwarf2out.c:10610:20: error: expected expression
v12 = ( tree_node *)i[2]; 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_formal_types_die/src/dwarf2out.c:10610:9: error: use of undeclared identifier 'tree_node'
v12 = ( tree_node *)i[2]; 
        ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_formal_types_die/src/obj/dwarf2out.o] Error 1
